<resources>
  <string name="app_name">Tech Office</string>
  <string name="expo_splash_screen_resize_mode" translatable="false">contain</string>
</resources>